--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -5,7 +5,7 @@ name: Manual Trigger
 on:
   workflow_dispatch:
   pull_request:
-      types: [opened, synchronize]
+      types: [opened]
 
 jobs:
   build:
@@ -16,5 +16,5 @@ jobs:
 
       - name: Run a sample script
         run: echo "Manual Trigger executed!"
-      - name: Mark as success
-        run: exit 0
+      - name: Mark as fail
+        run: exit 1
