--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -4,7 +4,6 @@ name: Manual Trigger
 
 on:
   workflow_dispatch:
-  pull_request:
 
 jobs:
   build:
@@ -15,5 +14,20 @@ jobs:
 
       - name: Run a sample script
         run: echo "Manual Trigger executed!"
-      - name: Mark as fail
-        run: exit 1
+
+      - name: Update PR status
+        run: |
+          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+            -d '{
+              "state": "success",
+              "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+              "description": "Manual Trigger executed successfully",
+              "context": "Manual Trigger"
+            }'
+
+      - name: Mark as success
+        run: exit 0
