--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -18,15 +18,19 @@ jobs:
       - name: Update PR status
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          OWNER: KsavinN
+          REPO: Test-Chromium
+          SHA: ${{ github.sha }}
         run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          curl -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$OWNER/$REPO/statuses/$SHA \
             -d '{
               "state": "success",
-              "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+              "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
               "description": "Manual Trigger executed successfully",
               "context": "Manual Trigger"
             }'
