--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Update PR status
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           OWNER: ksavinN
           REPO: Test-Chromium
           SHA: ${{ github.sha }}
