push to check changes with merge queue

--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           onlyChanged: true
+          exitZeroOnChanges: true
 
       - name: Update PR status
         env:
