--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -28,25 +28,25 @@ jobs:
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
 
-      # - name: Update PR status
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #     OWNER: ksavinN
-      #     REPO: Test-Chromium
-      #     SHA: ${{ github.sha }}
-      #   run: |
-      #     curl -L \
-      #       -X POST \
-      #       -H "Accept: application/vnd.github+json" \
-      #       -H "Authorization: Bearer $GITHUB_TOKEN" \
-      #       -H "X-GitHub-Api-Version: 2022-11-28" \
-      #       https://api.github.com/repos/$OWNER/$REPO/statuses/$SHA \
-      #       -d '{
-      #         "state": "success",
-      #         "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
-      #         "description": "Chromatic deployment succeeded",
-      #         "context": "Chromatic"
-      #       }'
+      - name: Update PR status
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          OWNER: ksavinN
+          REPO: Test-Chromium
+          SHA: ${{ github.sha }}
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$OWNER/$REPO/statuses/$SHA \
+            -d '{
+              "state": "success",
+              "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
+              "description": "Chromatic deployment succeeded",
+              "context": "Chromatic"
+            }'
 
       - name: Mark as success
         run: exit 0
