--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -1,14 +1,14 @@
+
+
 name: 'Chromatic'
 
 on:
-  merge_group:
-    types: [checks_requested]
-    branches: [main]
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, closed]
 
 jobs:
   Chromatic:
+    if: github.event.pull_request.merged == true || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
