--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,8 +3,8 @@
 name: 'Chromatic'
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
+  merge_group:
+    types: [checks_requested]
 
 jobs:
   Chromatic:
