--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,9 @@
 name: 'Chromatic'
 
 on:
-  merge_group
+  pull_request:
+    branches:
+      - main
 
 jobs:
   Chromatic:
@@ -12,6 +14,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Check for changes in components folder
+        id: check_changes
+        run: |
+          if git diff --name-only origin/main | grep -q '^components/.*\.tsx$'; then
+            echo "changes=true" >> $GITHUB_ENV
+          else
+            echo "changes=false" >> $GITHUB_ENV
+          fi
+
+      - name: Skip job if no changes in components folder
+        if: ${{ env.changes }} == 'false'
+        run: echo "No changes in components folder. Skipping job." && exit 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,5 +41,4 @@ jobs:
         uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-      - name: Force Failure
-        run: exit 1
+
