--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -18,15 +18,17 @@ jobs:
       - name: Check for changes in components folder
         id: check_changes
         run: |
-          if git diff --name-only origin/main | grep -q '^components/.*\.tsx$'; then
+          CHANGED_FILES=$(git diff --name-only origin/main)
+          echo "Changed files: $CHANGED_FILES"
+          if echo "$CHANGED_FILES" | grep -q '^components/.*\.tsx$'; then
             echo "changes=true" >> $GITHUB_ENV
           else
             echo "changes=false" >> $GITHUB_ENV
           fi
 
       - name: Skip job if no changes in components folder
-        if: ${{ env.changes }} == 'false'
-        run: echo "No changes in components folder. Skipping job." && exit 0
+        if: env.changes == 'false'
+        run: exit 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -41,5 +43,4 @@ jobs:
         uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          skip: ${{ env.changes }} == 'false'
 
