--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,5 +1,3 @@
-
-
 name: 'Chromatic'
 
 on:
@@ -15,15 +13,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Fetch all branches
+        run: git fetch --all
+
       - name: Check for changes in components folder
         id: check_changes
         run: |
-          CHANGED_FILES=$(git diff --name-only origin/main)
+          CHANGED_FILES=$(git diff --name-only origin/main HEAD)
           echo "Changed files: $CHANGED_FILES"
-          if echo "$CHANGED_FILES" | grep -q '^components/.*\.tsx$'; then
-            echo "changes=true" >> $GITHUB_ENV
+          if echo "$CHANGED_FILES" | grep -q '^src/components/.*\.tsx$'; then
+            echo "::set-output name=changes::true"
           else
-            echo "changes=false" >> $GITHUB_ENV
+            echo "::set-output name=changes::false"
           fi
 
       - name: Setup Node.js
@@ -36,8 +37,7 @@ jobs:
         run: pnpm install
 
       - name: Publish to Chromatic
-        if: env.changes == 'true'
+        if: steps.check_changes.outputs.changes == 'true'
         uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-
