--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -38,8 +38,7 @@ jobs:
         run: pnpm install
 
       - name: Publish to Chromatic
-        if: steps.check_changes.outputs.changes == 'true'
         uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          skip: ${{ github.event_name == 'pull_request' }}
+          skip: ${{ github.event_name == 'pull_request' || steps.check_changes.outputs.changes == 'true' }}
