--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Update PR status
         env:
-            GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             OWNER: MidnightStudioGames
             REPO: Test-Chromatic
             SHA: ${{ github.sha }}
