--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -21,17 +21,6 @@ jobs:
       - name: Fetch all branches
         run: git fetch --all
 
-      - name: Check for changes in components folder
-        id: check_changes
-        run: |
-          CHANGED_FILES=$(git diff --name-only origin/main HEAD)
-          echo "Changed files: $CHANGED_FILES"
-          if echo "$CHANGED_FILES" | grep -q '^src/components/.*\.tsx$'; then
-            echo "changes=true" >> $GITHUB_OUTPUT
-          else
-            echo "changes=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
 
@@ -49,7 +38,7 @@ jobs:
 
       - name: Update PR status
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
             OWNER: MidnightStudioGames
             REPO: Test-Chromatic
             SHA: ${{ github.sha }}
