--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,7 +12,7 @@ jobs:
   Chromatic:
     permissions: write-all
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event.issue.pull_request  && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' || (github.event.issue.pull_request  && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
     steps:
       - uses: actions/checkout@v4
         with:
