--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -14,10 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' || (github.event.issue.pull_request  && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
+      
+      - name: Get Branch name
+        id: branchName
+        run: |
+         echo ::set-output name=branch::$(echo $PR_COMMENT | cut -d "[" -f2 | cut -d "]" -f1)
+        env:
+         PR_COMMENT: ${{ github.event.comment.body }}
+      
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with: 
+         ref: ${{ steps.branchName.outputs.branch }}
+      
       - name: Fetch all branches
         run: git fetch --all
 
