--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' || (github.event.issue.pull_request  && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Fetch all branches
         run: git fetch --all
