--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -60,7 +60,7 @@ jobs:
       - name: get the one latest&last sha # get the last commit sha in pull_Requst
         run: |
           URL=${{ github.event.issue.pull_request.url }}/commits
-          echo "::set-env name=PRSHA::$(curl -u "weide:${{ secrets.GITHUB_TOKEN }}" -s $URL | jq -r '.[] | .sha' | xargs | awk -F " " '{print $NF}')"
+          echo "$(curl -u "weide:${{ secrets.GITHUB_TOKEN }}" -s $URL | jq -r '.[] | .sha' | xargs | awk -F " " '{print $NF}')" >> $PRSHA
       - name: echo PRSHA # check the lastest SHA
         run: |
           echo $PRSHA
