--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -37,26 +37,6 @@ jobs:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           skip: ${{ github.event_name == 'merge_group' }}
 
-      # - name: Update PR status
-      #   env:
-      #       GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #       OWNER: MidnightStudioGames
-      #       REPO: Test-Chromatic
-      #       SHA: ${{ github.sha }}
-      #   run: |
-      #       curl -L \
-      #         -X POST \
-      #         -H "Accept: application/vnd.github+json" \
-      #         -H "Authorization: Bearer $GITHUB_TOKEN" \
-      #         -H "X-GitHub-Api-Version: 2022-11-28" \
-      #         https://api.github.com/repos/$OWNER/$REPO/statuses/$SHA \
-      #         -d '{
-      #           "state": "success",
-      #           "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
-      #           "description": "Chromatic deployment succeeded",
-      #           "context": "Chromatic"
-      #         }'
-
       - name: get the one latest&last sha # get the last commit sha in pull_Requst
         run: |
           URL=${{ github.event.issue.pull_request.url }}/commits
@@ -64,9 +44,24 @@ jobs:
       - name: echo PRSHA # check the lastest SHA
         run: |
           echo $PRSHA
-      - name: create the status # create the status on the lastest commit sha from pull request
+      - name: Update PR status
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          OWNER: MidnightStudioGames
+          REPO: Test-Chromatic
         run: |
-            curl -X POST -u "weide:${{ secrets.PAT0309 }}" -H "Content-Type: application/json" "https://api.github.com/repos/${{ github.repository }}/statuses/$PRSHA" --data '{ "state": "failure", "target_url": "https://example.com/build/status", "description": "The build failed!", "context": "continuous-integration/statuscreation7"}'
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$OWNER/$REPO/statuses/$PRSHA \
+            -d '{
+              "state": "success",
+              "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
+              "description": "Chromatic deployment succeeded",
+              "context": "Chromatic"
+            }'
   
       - name: Mark as success
         run: exit 0
