--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,13 +12,15 @@ jobs:
   Chromatic:
     permissions: write-all
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' || (github.event.issue.pull_request  && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request' || (github.event.issue.pull_request && contains(github.event.comment.body, '/chromatic')) || github.event_name == 'merge_group'
     steps:
-
-      - uses: actions/checkout@v4
+      # Checkout the correct branch and commit for pull request events
+      - name: Checkout code from PR or default branch
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}  # Checkout the PR's last commit if available, else use the default
+
       - name: Fetch all branches
         run: git fetch --all
 
@@ -37,32 +39,27 @@ jobs:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           skip: ${{ github.event_name == 'merge_group' }}
 
-      - name: get the one latest&last sha # get the last commit sha in pull_Requst
-        run: |
-          URL=${{ github.event.issue.pull_request.url }}/commits
-          echo "PRSHA=$(curl -u "weide:${{ secrets.GITHUB_TOKEN }}" -s $URL | jq -r '.[] | .sha' | xargs | awk -F " " '{print $NF}')" >> "$PRSHA"
-      - name: echo PRSHA # check the lastest SHA
-        run: |
-          echo $PRSHA
+      # Use the correct SHA for the PR or other events
       - name: Update PR status
+        if: github.event.issue.pull_request || github.event.pull_request
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           OWNER: MidnightStudioGames
           REPO: Test-Chromatic
+          SHA: ${{ github.event.pull_request.head.sha || github.sha }}  # Use PR's head SHA if available, else default to `github.sha`
         run: |
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $GITHUB_TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$OWNER/$REPO/statuses/$PRSHA \
+            https://api.github.com/repos/$OWNER/$REPO/statuses/$SHA \
             -d '{
               "state": "success",
               "target_url": "https://github.com/$OWNER/$REPO/actions/runs/${{ github.run_id }}",
               "description": "Chromatic deployment succeeded",
               "context": "Chromatic"
             }'
-  
+
       - name: Mark as success
         run: exit 0
-  
