--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -21,9 +21,7 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha || github.sha }}  # Checkout the PR's last commit if available, else use the default
       - name: Show base ref
-        env: 
-          PULL_REQUEST_BASE_REF: ${{github.event.pull_request.base.ref}}
-        run: echo "$PULL_REQUEST_BASE_REF"
+        run: echo " Base ref of the PR ${{ github.event.pull_request.base.ref }}"
 
       - name: Fetch all branches
         run: git fetch --all
