--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -20,21 +20,22 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.issue.number }}
         run: echo "pr_ref=$(gh pr view $PR_NUMBER --repo ${{ github.repository }} --json headRefName | jq -r '.headRefName')" >> $GITHUB_OUTPUT
-      # Checkout the correct branch and commit for pull request events
-      - name: Checkout code from PR or default branch
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ steps.getRef.outputs.pr_ref }}
-      - name: Fetch all branches
-        run: git fetch --all
-      
       - name: Get last commit hash of specific branch
         run: |
           git fetch origin ${{ steps.getRef.outputs.pr_ref }}
           LAST_COMMIT_HASH=$(git rev-parse origin/${{ steps.getRef.outputs.pr_ref }})
           echo "Last commit hash of branch '${{ steps.getRef.outputs.pr_ref }}' is $LAST_COMMIT_HASH"
           echo "LAST_COMMIT_HASH=$LAST_COMMIT_HASH" >> $GITHUB_ENV  # Save the hash to the environment for later steps
+
+      - name: Checkout code from PR or default branch
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ env.LAST_COMMIT_HASH }}
+      - name: Fetch all branches
+        run: git fetch --all
+      
+
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
